src/app/shared/components/alert/alert.component.css
#alert-box {
    position: fixed;
    bottom: -1rem;
    left: 50%;
    z-index: 21;
    border-radius: 0.375rem 0.375rem 0 0 !important;
    border-bottom: none !important;
    white-space: nowrap;
}

#alert-box::before {
    position: absolute;
    content: '';
    left: 0;
    bottom: 0;
    height: 0.25rem;
    width: 0%;
}

#alert-box.start-progress-bar::before {
    animation: progress-bar 2.7s linear 0.3s;
}

@keyframes progress-bar {
    from { width: 100%; } 
    to   { width: 0; }
}

#alert-text {
    font-weight: 500;
}

/* ===== Progress bar dynamic background color classes ===== */
#alert-box.alert-primary::before {
    background-color: var(--bs-primary-border-subtle);
}

#alert-box.alert-secondary::before {
    background-color: var(--bs-secondary-border-subtle);
}

#alert-box.alert-success::before {
    background-color: var(--bs-success-border-subtle);
}

#alert-box.alert-danger::before {
    background-color: var(--bs-danger-border-subtle);
}

#alert-box.alert-warning::before {
    background-color: var(--bs-warning-border-subtle);
}

#alert-box.alert-info::before {
    background-color: var(--bs-info-border-subtle);
}

#alert-box.alert-light::before {
    background-color: var(--bs-light-border-subtle);
}

#alert-box.alert-dark::before {
    background-color: var(--bs-dark-border-subtle);
}

